--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,13 @@
         "jest": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
+    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:testing-library/react", "plugin:prettier/recommended", "plugin:jest-dom/recommended"],
     "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["react", "prettier"],
+    "plugins": ["react", "prettier", "testing-library", "jest-dom"],
     "rules": {
         "react/prop-types": "off",
         "react/react-in-jsx-scope": 0
