--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "serve": "vite preview",
         "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
         "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-        "format": "prettier --write src//**/*.{js,jsx,css} --config ./.prettierrc",
+        "format": "prettier --write 'src/**/*.{js,jsx,css}' --config ./.prettierrc",
         "test": "jest test --watchAll --coverage"
     },
     "dependencies": {
