--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,15 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "jest": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:testing-library/react", "plugin:prettier/recommended", "plugin:jest-dom/recommended"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:testing-library/react",
+        "plugin:prettier/recommended",
+        "plugin:jest-dom/recommended"
+    ],
     "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
