--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,9 +5,6 @@
         "useDefineForClassFields": true,
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "baseUrl": ".",
-        "types": ["node"],
-        // "paths": {
-        //     "utils": ["./src/utils"]
-        // }
+        "types": ["node"]
     }
 }
