--- a/.eslintrc
+++ b/.eslintrc
@@ -2,23 +2,34 @@
     "env": {
         "browser": true,
         "es2021": true,
+        "jest": true,
         "node": true
     },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:testing-library/react",
-        "plugin:prettier/recommended",
-        "plugin:jest-dom/recommended"
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended"
     ],
-    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["react", "prettier", "testing-library", "jest-dom"],
+    "plugins": ["react", "prettier"],
     "rules": {
+        "no-unused-vars": "warn",
         "react/prop-types": "off",
-        "react/react-in-jsx-scope": 0
-    }
+        "no-prototype-builtins": "off",
+        "react/display-name": "off",
+        "no-inner-declarations": "off"
+    },
+    "globals": {
+        "vi": true
+    },
+    "overrides": [
+        {
+            "files": ["*.test.js"],
+            "extends": ["plugin:testing-library/react"]
+        }
+    ]
 }
